Adapt JVM argument to Java 1.8 (refs #1592)